# Learning-point-processes

./: .coverage  .coveragerc  .gitattributes  .gitignore  .gitmessage  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SETUP.md  SETUP_GUIDE.md  absolute_path.py  check_installation.py  clean_git_cache.bat  clean_git_cache.sh  clean_repo.sh  coverage.xml  debug_devices.py  final_test_output.txt  fix_notebooks.py  pyproject.toml  pytest.ini  pytest_config_trace.txt  reproduce_issue.py  requirements.txt  results.dvc  run.sh  test_api_imports.py  test_output.txt  test_output_verbose.txt  test_tpp_dataset_integration.py
.dvc/: config
.github/: README.md  depedandabot.yml  pull_request_template.md
.github/workflows/: ci.yml  deploy.yml  lint.yml
configs/: test_runner_config.yaml
docs/: docs.md
docs/source/: conf.py  index.rst
easy_tpp/: __init__.py
easy_tpp/config_factory/: REFACTORING_README.md  __init__.py  base.py  config_examples.py  data_config.py  distrib_comp_config.py  evaluation_config.py  hpo_config.py  logger_config.py  model_config.py  model_config_test.py  runner_config.py  simulator_config.py  syn_gen_config.py
easy_tpp/configs/: README.md  __init__.py  base.py  base_config.py  config_builder.py  config_factory.py  config_utils.py  data_config.py  hpo_config.py  logger_config.py  model_config.py  runner_config.py
easy_tpp/data/: README.md
easy_tpp/data_gen/: __init__.py  base_simulator.py  hawkes.py  histogram_predictor.py  self_correcting.py
easy_tpp/default_registers/: register_metrics.py
easy_tpp/evaluate/: TPP_metrics_compute.py  __init__.py  distribution_comparison.py  evaluation.py  evaluation_btw_data.py  evaluation_model.py  metrics_compute.py  model_distribution_comparison.py  new_comparator.py
easy_tpp/evaluation/: README.md  __init__.py
easy_tpp/hpo/: __init__.py  base_hpo.py  optuna_hpo.py
easy_tpp/models/: README.md  __init__.py  anhn.py  attnhp.py  baselayer.py  basemodel.py  fullynn.py  hawkes.py  hawkes_copy.py  intensity_free.py  model_factory.py  model_registry.py  neural_model.py  nhp.py  ode_tpp.py  poisson.py  rmtpp.py  sahp.py  self_correcting.py  thinning.py  thp.py
easy_tpp/preprocess/: __init__.py  data_collator.py  data_loader.py  dataset.py  event_tokenizer.py  visualizer.py
easy_tpp/runner/: __init__.py  base_runner.py  lightning_runner.py  runner.py  trainer.py
easy_tpp/runners/: README.md  __init__.py  benchmark_runner.py  cli_base.py  data_generator_runner.py  data_inspector.py  experiment_runner.py  interactive_setup.py  model_runner.py  runner.py  system_info.py
easy_tpp/scripts/: easytpp_cli_runners.py  run_all_pipeline.sh  test.sh
easy_tpp/simulate/: __init__.py  simulator.py
easy_tpp/synthetic_data_generator/: __init__.py  base_generator.py  hawkes.py  histogram_predictor.py  self_correcting.py  synthetic_data_thinning.py  test.py
easy_tpp/utils/: README.md  __init__.py  device_utils.py  gen_utils.py  generic.py  import_utils.py  log_utils.py  metrics.py  misc.py  model_utils.py  multiprocess_utils.py  ode_utils.py  registrable.py  tf_utils.py  yaml_config_utils.py
examples/: benchmark.py  benchmark_manger_example.py  compare_models.py  config_examples.py  config_factory_usage.py  data_inspection.py  data_loader.py  event_tokenizer.py  gen_synthetic_data.py  hf_data_loader.py  model_factory_example.py  model_registry_example.py  prediction_analysis.py  run_all_phase.py  run_all_phases_programmatic.py  simple_example.py  statistical_test_config_example.py  train_nhp.py  train_nhp_hpo.py  train_nhp_with_features.py
examples/inspection_plots/: event_type_dist.json  inter_event_time_dist.json  sequence_length_dist.json
examples/notebooks/: EasyTPP_Data_Generation_Benchmarks.ipynb  EasyTPP_Getting_Started.ipynb
examples/script_data_processing/: earthquake.py  make_hf_dataset.py  taobao.py  taxi.py  volcano.py
examples/synthetic_data_gen/: config.yaml  synthetic_data_gen.py  visualize.py
examples/train/: config.yaml  train.py
examples/train_experiment/: run_retweet.py
exp/data_gen/: FNN_sim.py  H2expi.py  config.yaml  hawkes_gen.py  run.py
exp/data_inspection/: config.yaml  data_inspection.py
exp/train/: config.yaml  train.py
lightning_logs/version_0/: events.out.tfevents.1752334730.cAo.10052.0  events.out.tfevents.1758196850.cAo.20284.0  events.out.tfevents.1762720826.cAo.22996.0  events.out.tfevents.1763086701.cAo.9100.0
lightning_logs/version_1/: events.out.tfevents.1752335043.cAo.16596.0  events.out.tfevents.1763122681.cAo.20164.0
lightning_logs/version_10/: events.out.tfevents.1763162256.cAo.12700.0
lightning_logs/version_11/: events.out.tfevents.1763343549.cAo.20672.0
lightning_logs/version_12/: events.out.tfevents.1763343644.cAo.1248.0
lightning_logs/version_13/: events.out.tfevents.1763343715.cAo.8552.0
lightning_logs/version_14/: events.out.tfevents.1763343840.cAo.19572.0
lightning_logs/version_15/: events.out.tfevents.1763346412.cAo.524.0
lightning_logs/version_16/: events.out.tfevents.1763346549.cAo.16004.0
lightning_logs/version_17/: events.out.tfevents.1763346615.cAo.10648.0  hparams.yaml
lightning_logs/version_18/: events.out.tfevents.1763348568.cAo.24428.0
lightning_logs/version_19/: events.out.tfevents.1763348608.cAo.24428.1
new_ltpp/: __init__.py  globals.py  shared_types.py
notebooks/: EasyTPP_Data_Generation_Benchmarks.ipynb  EasyTPP_Getting_Started.ipynb  Hawkes_MMD_Test.ipynb  NewLTPP_Getting_Started.ipynb  Test_MMD_Metric.ipynb  advanced_index.ipynb  torchmin.ipynb
run_files/: simulate.sh  train.sh  visu.sh
scripts/: CLI_PROFESSIONAL_README.md  CLI_README.md  README.md  cli.py  easytpp.bat  easytpp.ps1  easytpp_cli.py  easytpp_modern_cli.py  mmd_poisson_sweep.py  quick_start.py  setup_cli.py  test_cli.py  test_mmd_hawkes.py  train_ruche_cpu.sh
tests/: RUNNER_BASED_TESTS_README.md  RUNNER_TESTS_README.md  conftest.py  test_cli.py  test_data_loading_builder.py
yaml_configs/: bench_config.yaml  configs.yaml  data_configs.yaml  hpo_config.yaml  hpo_configs.yaml  model_configs.yaml  simul_configs.yaml  trainer_configs.yaml
(+2600 files in other folders)
